<resources>
    <string name="app_name">Currency Conversion</string>
    <string name="conversion">Conversion</string>
    <string name="currency_code_Name">Currency Code &amp; Name</string>
    <string name="search">Search</string>
</resources>