...
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                value = amt,
                onValueChange = {
                    amt = it
                    viewModel.requestConvertedList(amt)
                }, label = {
                    Text("Enter the Amount")
                }
            )
        }
    }
}
